@@ -24,7 +24,8 @@ For users:
 - New: Can add personalised fields in emailing selectors.
 - New: Customer code and supplier code can be defined automatically.
 - New: Emailing feature can extract civility from contacts.
-- New: Can creat a third party from a member of fundation module.
+- New: Can create a third party from a member of fundation module.
+- New: Can set a limit for stock alert to 0.
 - Fix: Handle correctly the comment in status changing of supplier orders.
 - Fix: Author, title and topic are correctly encoded in PDF.
 - Fix: Now HTML output is always UTF8, this solve bad PDF encoding on old users.
